go-web-deploy-neg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-api-neg
  labels:
    type: api
    service: go-web
    language: go
spec:
  replicas: 2
  selector:
    matchLabels:
      type: api
      service: go-web
  template:
    metadata:
      labels:
        type: api
        service: go-web
        language: go
    spec:
      containers:
      - name: api
        image: papudatta/simple_go_webserver:3
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
