go-web-svc-ilb-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilb-service
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
  labels:
    type: api 
    service: go-web
spec:
  type: LoadBalancer
  selector:
    type: api
    service: go-web
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
