go-web-svc-lb-bkend.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-lb-svc
  annotations:
    cloud.google.com/load-balancer-type: Internal
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    type: api
    service: go-web
