go-web-svc-neg-bkend.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-neg-svc
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "trusted-ext-sources-iap"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    type: api
    service: go-web
