go-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-api-svc
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    type: api
    service: go-web
