all_in_one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-api
  labels:
    type: api
    service: go-web
    language: go
spec:
  replicas: 2
  selector:
    matchLabels:
      type: api
      service: go-web
  template:
    metadata:
      labels:
        type: api
        service: go-web
        language: go
    spec:
      containers:
      - name: api
        image: papudatta/simple_go_webserver:3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: go-web-api-svc
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    type: api
    service: go-web

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
       paths:
        - path: /?(.*)
          backend:
            serviceName: go-web-api-svc
            servicePort: 8080
