go-web-ingress-neg.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: neg-bkend-go-ingress
spec:
  backend:
    serviceName: go-web-neg-svc
    servicePort: 80
