go-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
       paths:
        - path: /?(.*)
          backend:
            serviceName: go-web-api-svc
            servicePort: 8080
